# WordThread_MarkerEngine_offline

./: .env.txt  .gitignore  Module_merge.txt  README.md
.github/: copilot-instructions.md
ME_ENGINE_CORE_V0.9/: fly.toml  run_engine.py
ME_ENGINE_CORE_V0.9/marker_engine_core_v09/: .bandit  .coveragerc  .dockerignore  .editorconfig  .env.example  .flake8  .isort.cfg  .mypy.ini  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONV_PIPELINE.py  Dockerfile  GEMINI.md  Iterative_Plan_LD3.5.md  LICENSE  MANIFEST.in  Makefile  README.md  Remaining task Zielarchitektur.md  SECURITY.md  Specs_LD3.5.md  Zielarchitektur.md  api_service.py  chunk_models.py  dash_outsys_example.sqlite  docker-compose.yml  drift_axes.py  eRWEITERTER DEV-AUFTRAG –LD3.5 Up.md  engine_digest.py  marker_engine_core.py  marker_models.py  migrate_activation_rules.py  nginx.conf  numeric_normalizer_plugin.py  preflight_resolver.py  pyproject.toml  requirements.txt  resolve_and_create_placeholders.py  (+10 more)
ME_ENGINE_CORE_V0.9/marker_engine_core_v09/.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
ME_ENGINE_CORE_V0.9/marker_engine_core_v09/.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
ME_ENGINE_CORE_V0.9/marker_engine_core_v09/.github/workflows/: ci-cd.yml
ME_ENGINE_CORE_V0.9/marker_engine_core_v09/CAL_/: CAL_BASELINE_PROFILE.py  CAL_REACTIVE_CONTROL_SPIRAL.py  CAL_time_series_aggregator.py
ME_ENGINE_CORE_V0.9/marker_engine_core_v09/DETECT_/: DETECT_registry.json
ME_ENGINE_CORE_V0.9/marker_engine_core_v09/PROF_/: PROF_archetype_marker_weights.yaml  PROF_archetype_resonance_map.yaml  PROF_marker_axes.json
ME_ENGINE_CORE_V0.9/marker_engine_core_v09/SCH_/: SCH_CHA_Chankphasing.md  SCH_Chat_GESAMTANALYSE.yaml  SCH_Master_schema.json  SCH_fraud-markers.schema.json  SCH_friendship.json  SCH_marker.schema.v2.json  SCH_relation_analyse_schema.json  esda_plus_visuals.html  metrics_esda_plus.js  sch_self_deep_33.json
ME_ENGINE_CORE_V0.9/marker_engine_core_v09/SCR_/: SCR_score_models.py  SCR_scoring_engine.py  SCR_time_series_aggregator.py  scoring_engine.py  scr_window.json
ME_ENGINE_CORE_V0.9/marker_engine_core_v09/_Marker_5.0/: ATO_ACCUSATION_OF_CONTROL.yaml  ATO_ACCUSATION_PHRASE.yaml  ATO_ACTIVITY_VERB.yaml  ATO_ADMISSION_CUE.yaml  ATO_AMBIGUITY_QUOTES.yaml  ATO_ANGER.yaml  ATO_ANGER_EXPRESSION.yaml  ATO_ANTICIPATION_EXPRESSION.yaml  ATO_APOLOGY_DE.yaml  ATO_APPEAL_TO_AUTHORITY_EXPERT.yaml  ATO_APPEAL_TO_AUTHORITY_STUDY.yaml  ATO_AVOIDANCE_PHRASE.yaml  ATO_BARBED_COMMENT.yaml  ATO_BEDENKEN.yaml  ATO_BLAME_ATTRIBUTION.yaml  ATO_BLAME_SHIFT.yaml  ATO_BLAME_SHIFT_MARKER.yaml  ATO_BOUNDARY_CROSS.yaml  ATO_BOUNDARY_NEGOTIATION.yaml  ATO_BOUNDARY_SET.yaml  ATO_BOUNDARY_SETTING.yaml  ATO_BREATHINESS.yaml  ATO_CARE_CHECKIN.yaml  ATO_CARE_PING.yaml  ATO_CARE_PING_corrected.yaml  ATO_CERTAINTY_PHRASE.yaml  ATO_CLARIFICATION_REQUEST.yaml  ATO_COLD_LABEL.yaml  ATO_COMPARISON_MANIPULATION.yaml  ATO_COMPARISON_OBJECT.yaml  ATO_COMPASSION.yaml  ATO_COMPROMISE_OFFER.yaml  ATO_CONTRASTIVE_CONNECTOR_ABER.yaml  ATO_CONTRAST_CONJUNCTION.yaml  ATO_CONTROL.yaml  ATO_CONTROL_PHRASES.yaml  ATO_CORPORATE_DOUBLESPEAK.yaml  ATO_CREAKY_VOICE.yaml  ATO_CRITICISM_ATTACK_MARKER.yaml  ATO_CRITIQUE_ELEMENT.yaml  (+486 more)
ME_ENGINE_CORE_V0.9/marker_engine_core_v09/core-engine/config/: core_bundle_manifest.yaml  detect_registry.json  marker_engine_core.py  primary_access_weights_overrides.schema.json
ME_ENGINE_CORE_V0.9/marker_engine_core_v09/detectors/: plugin_numeric.py
ME_ENGINE_CORE_V0.9/marker_engine_core_v09/docs/: conf.py  index.rst  installation.rst
ME_ENGINE_CORE_V0.9/marker_engine_core_v09/plugins/: GR_SEM_EMO_CONTRAST_drift.py  GR_kimi-suggest-plugin.js  GR_sample-plugin.js  GR_timestamp-plugin.js
ME_ENGINE_CORE_V0.9/marker_engine_core_v09/repo/detectors/: DETECT_AMBIVALENCE_KNOT.py  DETECT_COMPLEX_MARKER_PATTERNS.py  DETECT_CO_REGULATION_COLLAPSE.py  DETECT_DETECT_MANEUVER_COMPONENTS.py  DETECT_FAMILIENDYNAMIK_MARKER.py  DETECT_REACTIVE_CONTROL_SPIRAL.py  DETECT_RESONANCE.py  DETECT_SYMBOLIC_ROLE_SWAP.py
ME_ENGINE_CORE_V0.9/marker_engine_core_v09/scoring_models/: business_interview_readiness.py  credibility_and_evidence.py  engagement_prompt_priority.py  uncertainty_watchdog.py
MarkThread/: .replit  app.py  pyproject.toml  replit.md
MarkThread/.local/state/replit/agent/filesystem/: filesystem_state.json
MarkThread/.streamlit/: config.toml
MarkThread/assets/: styles.css
MarkThread/attached_assets/: Pasted-WordThread-Marker-Frontend-Gesamtauftrag-final-konsolidiert-Geltung-Dieses-Dokument-ersetzt-1758017875059_1758017875060.txt
MarkThread/components/: advanced_drift_panel.py  charts.py  data_validation.py  drift_panel.py  evidence_panel.py  export_utils.py  file_monitor.py  file_upload.py  intuitions_panel.py  markers_table.py  performance_dashboard.py  provenance_panel.py
MarkThread/schemas/: analysis_bundle.py  promatra_handshake.py
MarkThread/utils/: data_processing.py  performance.py  sqlite_handler.py
PROMATRA/: # Code Citations.md  Snapshot_PROMATRA.md  Ziel, Geltungsbereich, Nicht‑Ziele.md  gui_app.py  promatra_core.py  promatra_increment1.ipynb  run_promatra.py  streamlit_app.py
PROMATRA/Marker_5.0_VOICE/: ATO_F0_RISE_FINAL.yaml  ATO_F0_VARIANCE_LOW.yaml  ATO_FILLER.yaml  ATO_INTENSITY_DIP.yaml  ATO_JITTER_SHIMMER_HIGH.yaml  ATO_LAUGHTER.yaml  ATO_LONG_RESPONSE_GAP.yaml  ATO_OVERLAP_INTERRUPT.yaml  ATO_PAUSE_LONG.yaml  ATO_SIGH.yaml  ATO_SPEECHRATE_DROP.yaml  CLU_DISSONANCE_ALERT_AUDIO.yaml  (+8 more)
docs/: Funktionsanalyse.md
schemas/: analysis_bundle_v1.schema.json  promatra_handshake_v1.schema.json
(+25 files in other folders)
