[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.9",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "statsmodels>=0.14.5",
    "streamlit>=1.49.1",
    "watchdog>=6.0.0",
]
